Add placeholder in <textarea>

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           
           <div class="form" id="Comments">
             <h3>Deixe seu comentário!</h3>
-            <textarea id="textUser" rows="10"></textarea><br/>
+            <textarea id="textUser" rows="10" placeholder="escreva..."></textarea><br/>
             <a onclick="limpar()" name="button" id="limpar">Limpar</a>
             <a onclick="enviar()" name="button" id="enviar">Enviar</a>
           </div>
